= Asciidoctor Tabs Changelog
:url-repo: https://github.com/asciidoctor/asciidoctor-tabs

This document provides a curated view of the changes to Asciidoctor Tabs per release.
For a detailed view of what has changed, refer to the {url-repo}/commits/main[commit history] on GitHub.

== 1.0.0-beta.4 (2023-05-22) - @mojavelinux

=== Changed

* Rework styles for tab to make them compatible with a transition effect; stub in effect in built-in stylesheet
* Add tab class to tab element (if missing) rather than overwriting className property to preserve existing class names

=== Fixed

* Don't alter state of nested tabs when tab is selected (#55)
* Don't wrap tables inside nested tabs with tablecontainer div multiple times (#55)
* Fix fallback logic in behavior script when tab is missing ID or does not match a panel

=== Details

{url-repo}/releases/tag/v1.0.0-beta.4[git tag] | {url-repo}/compare/v1.0.0-beta.3\...v1.0.0-beta.4[full diff]

== 1.0.0-beta.3 (2023-02-01) - @mojavelinux

=== Added

* Allow storage of sync tab selection to be configured using `tabs-sync-storage-key` and `tabs-sync-storage-scope` document attributes
* Add `is-loaded` class to tabs blocks on next tick after initialization for binding transitions (#50)
* Allow sync group ID to be specified rather than derived using the `sync-group-id` attribute on the tabs block (#52)

=== Changed

* Rename data-sync-group attribute to data-sync-group-id
* Don't lowercase sync group ID

=== Details

{url-repo}/releases/tag/v1.0.0-beta.3[git tag] | {url-repo}/compare/v1.0.0-beta.2\...v1.0.0-beta.3[full diff]

== 1.0.0-beta.2 (2023-01-30) - @mojavelinux

=== Changed

* Only sync congruent tabs blocks (i.e., tabs blocks that have the same tablist) (#47)
* Store sync tab selection by sync group (e.g., `preferred-tab-a|b|c`) (#47)

=== Fixed

* Turn off :focus-visible outline on tab selected by URL fragment

=== Details
